<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInFragment"
    android:background="@drawable/todo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/to_do_list"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/lightblue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightblue"
                android:hint="@string/type_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/lightblue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightblue"
                android:hint="@string/type_your_password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>


    <ImageView
        android:id="@+id/nextbtn"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/next"
        app:layout_constraintEnd_toEndOf="@id/card2"
        app:layout_constraintTop_toBottomOf="@id/card2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/not_registered"
        app:layout_constraintStart_toStartOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/card2" />

    <TextView
        android:id="@+id/authtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/card2" />


</androidx.constraintlayout.widget.ConstraintLayout>

